[tool.poetry]
name = "sqlalchemy_hooks"
version = "0.1.0"
description = ""
authors = ["Ryan Barth <ryan@barth.tech>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.23"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
setuptools = "^57.4.0"
pytest-mock = "^3.6.1"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
